# secureguard

./: .gitignore  ARCHITECTURE.md  COMPLIANCE.md  DEMO_GUIDE.md  GETTING_STARTED.md  LICENSE  README.md  REMEDIATION.md  pyproject.toml  setup.sh
examples/: fastapi_example.py  flask_example.py  vulnerable_cloudformation.yaml  vulnerable_requirements.txt  vulnerable_terraform.tf
examples/compliance/: README.md  example-findings.json
examples/remediation/: README.md  vulnerable-requirements.txt  vulnerable-terraform.tf
secureguard/: __init__.py  cli.py
secureguard/analyzers/: __init__.py  cloudformation.py  terraform.py
secureguard/compliance/: __init__.py  cli_commands.py
secureguard/compliance/audit/: __init__.py
secureguard/compliance/core/: __init__.py  control.py  evidence.py  framework.py  gap_analyzer.py  mapper.py
secureguard/compliance/frameworks/: README.md  nist_csf.yaml  soc2.yaml
secureguard/compliance/reports/: __init__.py  base.py  html_generator.py  json_generator.py
secureguard/remediation/: __init__.py  cli_commands.py  orchestrator.py
secureguard/remediation/fixers/: __init__.py  base.py  dependency_fixer.py  llm_fixer.py  terraform_fixer.py
secureguard/remediation/llm/: __init__.py  claude_client.py
secureguard/remediation/safety/: __init__.py  git_integration.py
secureguard/scanners/: __init__.py  deps_scanner.py
secureguard/sensors/: __init__.py  attack_detector.py  fastapi_sensor.py  flask_sensor.py
secureguard/utils/: __init__.py  output.py  severity.py
tests/: __init__.py  test_attack_detector.py  test_deps_scanner.py  test_severity.py
tests/compliance/: __init__.py  test_framework.py
