[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureguard"
version = "0.1.0"
description = "Comprehensive security scanning platform for vulnerability detection and runtime protection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["security", "vulnerability-scanner", "iac-analyzer", "runtime-protection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
sensor = [
    "fastapi>=0.109.0",
    "flask>=3.0.0",
]

[project.scripts]
secureguard = "secureguard.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/secureguard"
Repository = "https://github.com/yourusername/secureguard"
Issues = "https://github.com/yourusername/secureguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["secureguard*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=secureguard --cov-report=term-missing"
